# another-headless-blog

./: .coveragerc  .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  req-dev.txt  req-prod.txt  vetur.config.js  workspace-backup
.github/workflows/: main.yml
backend/: settings.py  urls.py
permissions/: admin.py  models.py
permissions/migrations/: 0001_initial.py
post/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_auto_20211129_0153.py
post/tests/: test_models.py  test_views.py
